--- a/Vite - Dashboard/style.css
+++ b/Vite - Dashboard/style.css
@@ -1,3 +1,8 @@
+:root {
+    --shadow: 0 0 20px -5px rgb(159, 156, 156);
+    --object-color: rgb(238, 238, 238);
+}
+
 *,
 *::before,
 *::after {
@@ -16,39 +21,77 @@
     row-gap: 5rem;
     
 }
+h2 {
+    text-align: center;
+}
 .time {
     grid-area: time;
     align-self: start;
     justify-self: center;
-    margin-top: 1rem;
+}
+.center {
+    display: flex;
+    align-items: center;
+}
+.clock {
+    display: flex;
+    justify-content: space-between;
+    width: 20rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: var(--object-color);
+    box-shadow: var(--shadow);
+    margin-top: 5rem;
+}
+.time h3 {
+    font-size: 1rem;
+    margin-left: auto;
+}
+.time h4 {
+    font-size: 1rem;
+    font-weight: 500;
+    margin: auto;
 }
 .title {
     grid-area: title;
+    display: flex;
+    justify-content: center;
 }
 .title-text {
     font-size: 3rem;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    margin-top: 5rem;
+    max-width: 20rem;
 }
 .card-wrapper {
     grid-area: cards;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-content: center;
     row-gap: 5rem;
     column-gap: 5rem;
-    margin-top: 5rem;
-}    
+}
+.card-divider {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5rem;
+}
 .card {
-    background-color: lightgrey;
-    opacity: 30%;
-    border-radius: 10%;
+    background-color: var(--object-color);
+    border-radius: 2rem;
     min-height: 30rem;
     min-width: 20rem;
-    box-shadow: 0 0 20px -5px black;
+    box-shadow: var(--shadow);
+}
+h2 {
+    margin-top: 2rem;
+}
+.text {
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
 }
 footer {
   display: flex;
@@ -58,20 +101,12 @@ footer {
    
 }
 .bg-button {
-    opacity: 30%;
-    width: 10rem;
+    display: flex;
+    justify-content: center;
+    width: 20rem;
     height: 2rem;
-    border-radius: 5%;
-    background-color: lightgray;
-    box-shadow: 0 0 20px -5px black;
+    border-radius: 1rem;
+    background-color: var(--object-color);
+    box-shadow: var(--shadow);
     margin-bottom: 5rem;
-}
-.clock {
-    opacity: 30%;
-    width: 15rem;
-    height: 2rem;
-    border-radius: 5%;
-    background-color: lightgray;
-    box-shadow: 0 0 20px -5px black;
-    margin-top: 5rem;
 }
