--- a/Vite - Dashboard/style.css
+++ b/Vite - Dashboard/style.css
@@ -1,18 +1,19 @@
 :root {
     --shadow: 0 0 20px -5px rgb(159, 156, 156);
     --object-color: rgb(238, 238, 238);
-    --button-color: rgb(160, 160, 160);
-    --selected-button: rgb(222, 222, 222);
+    --button-color: rgb(222, 222, 222);
+    --selected-button: rgb(160, 160, 160);
+    
 
     --font-family: 'Courier New';
 }
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
 }
+
 .container {
     display: grid;
     grid-template-rows: auto auto 1fr auto;
@@ -21,23 +22,18 @@
     "title"
     "cards"
     "unsplash";
-    height: 100vh;
+    min-height: 100vh;
+    background-repeat: no-repeat;
     row-gap: 5rem;
-    
 }
-h2 {
-    text-align: center;
-}
+
+/* Time */
 .time {
     grid-area: time;
     align-self: start;
     justify-self: center;
 }
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 .clock {
     display: flex;
     justify-content: space-between;
@@ -48,20 +44,25 @@ h2 {
     box-shadow: var(--shadow);
     margin-top: 5rem;
 }
+
 .time h3 {
     font-size: 1rem;
     margin-left: auto;
 }
+
 .time h4 {
     font-size: 1rem;
     font-weight: 500;
     margin: auto;
 }
+
+/* Title */
 .title {
     grid-area: title;
     display: flex;
     justify-content: center;
 }
+
 .title-text {
     font-size: 3rem;
     text-align: center;
@@ -69,6 +70,8 @@ h2 {
     outline: none;
     max-width: 50rem;
 }
+
+/* Cards */
 .card-wrapper {
     grid-area: cards;
     display: flex;
@@ -79,49 +82,47 @@ h2 {
     row-gap: 5rem;
     column-gap: 5rem;
 }
+
 .card-divider {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 5rem;
 }
+
 .card {
-    background-color: var(--object-color);
+    background-color: rgba(190, 190, 190, 0.8);
     border-radius: 2rem;
     min-height: 30rem;
     min-width: 20rem;
     box-shadow: var(--shadow);
 }
-h2 {
-    margin-top: 2rem;
+
+/* General */
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .text {
     color: black;
     font-family: var(--font-family);
 }
-footer {
-  display: flex;
-    grid-area: unsplash;
-    justify-self: center;
-    align-items: end;
-   
+
+h2 {
+    text-align: center;
+    margin-top: 2rem;
 }
-.bg-button {
-    display: flex;
-    justify-content: center;
-    width: 20rem;
-    height: 2rem;
-    border-radius: 1rem;
-    background-color: var(--object-color);
-    box-shadow: var(--shadow);
-    margin-bottom: 5rem;
-}
+
+/* Note */
 .note {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
 }
+
 .noteboard {
     background-color: white;
     border-radius: 2rem;
@@ -132,8 +133,8 @@ footer {
         display: none;
     }
     -ms-overflow-style: none;
-    
 }
+
 .noteboard-text {
     padding: 2rem;
     outline: none;
@@ -145,6 +146,7 @@ footer {
     text-wrap: wrap;
 }
 
+/* Link */
 .link {
     display: grid;
     grid-template-areas: 
@@ -157,12 +159,12 @@ footer {
     ::-webkit-scrollbar {
         display: none;
     }
-
 }
+
 .link-title {
     grid-area: title;
-
 }
+
 .saved-links {
     display: flex;
     flex-direction: column;
@@ -171,8 +173,8 @@ footer {
     justify-self: center;
     align-items: start;
     width: 18rem;
-    
 }
+
 .link-card {
     display: flex;
     align-items: center;
@@ -182,20 +184,21 @@ footer {
     border-radius: 1rem;
     padding: 0 1rem;
     min-height: 64px;
-    
 }
+
 .link-add-btn {
     grid-area: add;
     justify-self: center;
     width: 12rem;
     height: 3rem;
-    background-color: var(--selected-button);
+    background-color: var(--button-color);
     border-radius: 1rem;
     padding: 0 1rem;
     margin-bottom: 1.5rem;
 }
+
 .link-add-btn:hover {
-    background-color: var(--button-color);
+    background-color: var(--selected-button);
 }
 
 .link-text {
@@ -207,15 +210,18 @@ footer {
     margin-left: 1rem;
     flex-grow: 1;
 }
+
 .link-text::first-letter {
     text-transform: uppercase;
 }
+
 .favicon {
     width: 2rem;
 }
+
 .remove-btn {
     display: flex;
-    background-color: var(--selected-button);
+    background-color: var(--button-color);
     border: none;
     border-radius: 5px;
     width: 32px;
@@ -223,17 +229,43 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
 .remove-btn:hover {
-    background-color: var(--button-color);
+    background-color: var(--selected-button);
 }
+
 #saved-links {
     max-height: 20rem;
     overflow-y: auto;
     scrollbar-width: none;
     -ms-overflow-style: none;
-  }
+}
+
 .trash-bin {
     width: 1rem;
     height: 1rem;
     pointer-events: none;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    grid-area: unsplash;
+    justify-self: center;
+    align-items: end;
+}
+
+.bg-button {
+    display: flex;
+    justify-content: center;
+    width: 20rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: var(--button-color);
+    box-shadow: var(--shadow);
+    margin-bottom: 5rem;
+}
+
+.bg-button:hover {
+    background-color: var(--selected-button);
 }
