--- a/Vite - Dashboard/style.css
+++ b/Vite - Dashboard/style.css
@@ -163,7 +163,7 @@ h2 {
 .link-card {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 17rem;
     height: 4rem;
     background-color: white;
     border-radius: 1rem;
