--- a/Vite - Dashboard/style.css
+++ b/Vite - Dashboard/style.css
@@ -311,6 +311,7 @@ h2 {
     outline: none;
     max-width: 19rem;
     max-height: 23rem;
+    min-height: 23rem;
     font-family: var(--font-family);
     overflow-y: auto;
     scrollbar-width: none;
